      \code{parSapplyLB}.
      
      \item \code{assignInNamespace()} has further restrictions on use
      apart from at top-level, as its help page has warned.
      Expect it to be disabled from programmatic use in the future.
      
      \item \code{system()} and \code{system2()} when capturing output
      report a non-zero status in the new \code{"status"} attribute.
    }
  }
  
  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \code{R CMD INSTALL} will now do a test load for all
      sub-architectures for which code was compiled (rather than just
      the primary sub-architecture).
      
      \item Code in packages is now compiled with \code{-NDEBUG} to
      mitigate against \code{assert} being called in production use.
      Developers can turn this off during package development with
      \code{PKG_CPPFLAGS = -UNDEBUG}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
       \item \command{R CMD check} now gives a warning rather than a
       note if it finds inefficiently compressed datasets.  With
       \command{bzip2} and \command{xz} compression having been
       available since \R 2.10.0, there is no excuse for not using them.
     }
   }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item \command{R CMD Rd2dvi} is now defunct: use \command{R CMD Rd2pdf}.

      \item Options such as \code{--max-nsize} and the function
      \code{mem.limits()} are now defunct.

      \item Use of \code{library.dynam()} without specifying all the
      first three arguments is now disallowed.

      Use of \code{chname} in \code{library.dynam()} with the extension
      \file{.so} or \code{.dll} (which was never allowed according
      to the help page) is defunct.  This also applies to
      \code{library.dynam.unload()} and to \code{useDynLib} directives
      in \code{NAMESPACE} files.

      \item The internal functions \code{.readRDS()} and
      \code{.saveRDS()} are now defunct.
