@@ -259,6 +259,11 @@
 	      function(x,y) .Internal(rbind(deparse.level = 0, x, y)))
     setMethod("rbind2", signature(x = "ANY", y = "missing"),
 	      function(x,y) .Internal(rbind(deparse.level = 0, x)))
+
+    setMethod("kronecker", signature(X = "ANY", Y = "ANY"),
+	      function(X, Y, FUN = "*", make.dimnames = FALSE, ...)
+              .kronecker(X, Y, FUN = FUN, make.dimnames = make.dimnames, ...))
+
     .InitStructureMethods(envir)
 ### Uncomment next line if we want special initialize methods for basic classes
     .InitBasicClassMethods(envir)
